force-app/main/default/objects/Task__x/Task__x.object-meta.xml
<CustomObject>
    <description>Task</description>
    <externalDataSource>NDR_Privacy_Center_Archive</externalDataSource>
    <externalName>task</externalName>
    <label>Task</label>
    <pluralLabel>Task</pluralLabel>
</CustomObject>