force-app/main/default/objects/Task__x/fields/Call_Duration__c.field-meta.xml
<CustomField>
    <fullName>Call_Duration__c</fullName>
    <externalDeveloperName>calldurationinseconds</externalDeveloperName>
    <label>Call Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>