force-app/main/default/objects/Task__x/fields/Call_Object_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Call_Object_Identifier__c</fullName>
    <externalDeveloperName>callobject</externalDeveloperName>
    <label>Call Object Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>