force-app/main/default/objects/Task__x/fields/Call_Result__c.field-meta.xml
<CustomField>
    <fullName>Call_Result__c</fullName>
    <externalDeveloperName>calldisposition</externalDeveloperName>
    <label>Call Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>