force-app/main/default/objects/Task__x/fields/Call_Type__c.field-meta.xml
<CustomField>
    <fullName>Call_Type__c</fullName>
    <externalDeveloperName>calltype</externalDeveloperName>
    <label>Call Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>