force-app/main/default/objects/Task__x/fields/Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date_Time__c</fullName>
    <externalDeveloperName>completeddatetime</externalDeveloperName>
    <label>Completed Date/Time</label>
    <type>DateTime</type>
</CustomField>