force-app/main/default/objects/Task__x/fields/Create_Recurring_Series_of_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Create_Recurring_Series_of_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>isrecurrence</externalDeveloperName>
    <label>Create Recurring Series of Tasks</label>
    <type>Checkbox</type>
</CustomField>