force-app/main/default/objects/Task__x/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <externalDeveloperName>createddate</externalDeveloperName>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>