force-app/main/default/objects/Task__x/fields/Due_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Only__c</fullName>
    <externalDeveloperName>activitydate</externalDeveloperName>
    <label>Due Date Only</label>
    <type>DateTime</type>
</CustomField>