force-app/main/default/objects/Task__x/fields/ingest_ts__c.field-meta.xml
<CustomField>
    <fullName>ingest_ts__c</fullName>
    <externalDeveloperName>ingest_ts</externalDeveloperName>
    <label>Ingest_ts</label>
    <type>DateTime</type>
</CustomField>