force-app/main/default/objects/Task__x/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <externalDeveloperName>priority</externalDeveloperName>
    <label>Priority</label>
    <length>255</length>
    <type>Text</type>
</CustomField>