force-app/main/default/objects/Task__x/fields/Recurrence_Day_of_Week_Mask__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Day_of_Week_Mask__c</fullName>
    <externalDeveloperName>recurrencedayofweekmask</externalDeveloperName>
    <label>Recurrence Day of Week Mask</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>