force-app/main/default/objects/Task__x/fields/Recurrence_End__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_End__c</fullName>
    <externalDeveloperName>recurrenceenddateonly</externalDeveloperName>
    <label>Recurrence End</label>
    <type>Date</type>
</CustomField>