force-app/main/default/objects/Task__x/fields/Recurrence_Instance__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Instance__c</fullName>
    <externalDeveloperName>recurrenceinstance</externalDeveloperName>
    <label>Recurrence Instance</label>
    <length>40</length>
    <type>Text</type>
</CustomField>