force-app/main/default/objects/Task__x/fields/Recurrence_Interval__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Interval__c</fullName>
    <externalDeveloperName>recurrenceinterval</externalDeveloperName>
    <label>Recurrence Interval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>