force-app/main/default/objects/Task__x/fields/Recurrence_Month_of_Year__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Month_of_Year__c</fullName>
    <externalDeveloperName>recurrencemonthofyear</externalDeveloperName>
    <label>Recurrence Month of Year</label>
    <length>40</length>
    <type>Text</type>
</CustomField>