force-app/main/default/objects/Task__x/fields/Recurrence_Start__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Start__c</fullName>
    <externalDeveloperName>recurrencestartdateonly</externalDeveloperName>
    <label>Recurrence Start</label>
    <type>Date</type>
</CustomField>