force-app/main/default/objects/Task__x/fields/Recurrence_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Time_Zone__c</fullName>
    <externalDeveloperName>recurrencetimezonesidkey</externalDeveloperName>
    <label>Recurrence Time Zone</label>
    <length>40</length>
    <type>Text</type>
</CustomField>