force-app/main/default/objects/Task__x/fields/Related_To_Count__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Count__c</fullName>
    <externalDeveloperName>whatcount</externalDeveloperName>
    <label>Related To Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>