force-app/main/default/objects/Task__x/fields/Relation_Count__c.field-meta.xml
<CustomField>
    <fullName>Relation_Count__c</fullName>
    <externalDeveloperName>whocount</externalDeveloperName>
    <label>Relation Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>