force-app/main/default/objects/Task__x/fields/Reminder_Set__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>isreminderset</externalDeveloperName>
    <label>Reminder Set</label>
    <type>Checkbox</type>
</CustomField>