force-app/main/default/objects/Task__x/fields/Repeat_This_Task__c.field-meta.xml
<CustomField>
    <fullName>Repeat_This_Task__c</fullName>
    <externalDeveloperName>recurrenceregeneratedtype</externalDeveloperName>
    <label>Repeat This Task</label>
    <length>40</length>
    <type>Text</type>
</CustomField>