force-app/main/default/objects/Task__x/fields/Task_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Task_Subtype__c</fullName>
    <externalDeveloperName>tasksubtype</externalDeveloperName>
    <label>Task Subtype</label>
    <length>40</length>
    <type>Text</type>
</CustomField>